[package]
name = "web"
version = "0.1.0"
authors = ["mahulst <michel@voorkanter.com>"]
edition = "2018"

[dependencies]
read-topic-api = { path = "../read-topic-api" }
bytes = "0.4"
env_logger = "0.5"

actix = "0.7"
actix-web = "0.7"

futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

dotenv = "0.10"