[package]
name = "kafka-admin"
version = "0.1.0"
authors = ["Michel van der Hulst <michel@voorkanter.com>"]
edition = "2018"

[dependencies]
rdkafka = { git = "https://github.com/benesch/rust-rdkafka", branch = "admin-client" }
futures = "0.1.21"
libc = "0.2.0"
log = "0.3.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
backoff = "0.1.5"
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.3.0"
rand = "0.3.15"
regex = "1.1.6"
tokio = "0.1.7"
