[package]
name = "web"
version = "0.1.0"
authors = ["mahulst <michel@voorkanter.com>"]
edition = "2018"

[dependencies]
read-topic-api = { path = "../read-topic-api" }
kafka-admin = { path = "../kafka-admin" }
bytes = "0.4"
env_logger = "0.5"

actix-rt = "0.2.5"
actix-web = "1.0.7"
actix-files = "0.1.4"
actix-cors = "0.1.0"

futures = "0.1.25"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

dotenv = "0.10"

[profile.release]
debug = true
